--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/ts-config",
+  "name": "@dsllt-ignite-ui/ts-config",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
