--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,4 +1,6 @@
 {
-  "extends": "@ignite-ui/ts-config/react.json",
-  "include": ["src"]
+  "extends": "@dsllt-ignite-ui/ts-config/react.json",
+  "include": [
+    "src"
+  ]
 }
