ci: adicionando tuboRepo cache no build

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -8,6 +8,6 @@
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "ignore": [
-    "@dsllt-ignite-ui/docs"
+    "@ignite-ui/docs"
   ]
 }
