--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,9 +14,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@dsllt-ignite-ui/eslint-config": "*",
-    "@dsllt-ignite-ui/tokens": "*",
-    "@dsllt-ignite-ui/ts-config": "*",
+    "@ignite-ui/eslint-config": "*",
+    "@ignite-ui/tokens": "*",
+    "@ignite-ui/ts-config": "*",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "react": "^18.2.0",
