--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -14,8 +14,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@dsllt-ignite-ui/ts-config": "*",
-    "@dsllt-ignite-ui/eslint-config": "*",
+    "@ignite-ui/ts-config": "*",
+    "@ignite-ui/eslint-config": "*",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
   }
