--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dsllt-ignite-ui/ts-config",
+  "name": "@ignite-ui/ts-config",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,6 +8,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT", 
+  "license": "MIT",
   "private": true
 }
