--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -16,13 +16,15 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
       - run: npm ci
 
       - run: npm run build
         env:
-          TURBO_TOKEN: aQNG3sHXsDnn8QsmG0mb43DA
-          SLUG_TEAM: dsllt
+          TURBO_TOKEN: tec9EPP6SnfQiCb6CHzyrYgM
+          TURBO_TEAM: dsllt
 
       - name: Deploy storybook
         working-directory: ./packages/docs
