--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ignite-ui/docs",
-  "version": "1.0.0",
+  "name": "@dsllt-ignite-ui/docs",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -28,8 +28,8 @@
   },
   "dependencies": {
     "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
+    "@dsllt-ignite-ui/react": "*",
+    "@dsllt-ignite-ui/tokens": "*",
     "@ignite-ui/ts-config": "*",
     "@storybook/addon-a11y": "^7.0.20",
     "phosphor-react": "^1.4.1",
