--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ignite-ui/react",
-  "version": "1.0.0",
+  "name": "@dsllt-ignite-ui/react",
+  "version": "1.1.0",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -15,7 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/tokens": "*",
+    "@dsllt-ignite-ui/tokens": "*",
     "@ignite-ui/ts-config": "*",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
